# Patient-Specific-Residual-INR

./: .gitignore  README.md  pyproject.toml
configs/: slice_default.yaml
context/: project-proposal.tex  ramp-up.md
notebooks/: direct_dicom_prior_ablation.ipynb  kspace_inr_pipeline.ipynb  laps_experiment1_acceleration.ipynb  magnitude_phase_formulation_followup.ipynb  magnitude_phase_heldout_evaluation.ipynb
reports/laps_experiment1/: results_1d_paper.csv  results_1d_quick.csv  results_2d_quick.csv
reports/magnitude_phase_tuning/: capacity_sweep.csv  final_development_comparison.csv  laps_nerp_reference.csv  optimization_sweep.csv  ours_acceleration_sweep.csv  selected_configuration.json
reports/sparse/: results.tex
reports/stress_misreg/: results.tex
reports/sweep_change/: results.tex
reports/sweep_slam/: results.tex
scripts/: build_direct_dicom_prior_notebook.py  build_laps_experiment1_notebook.py  build_magnitude_phase_followup_notebook.py  build_magnitude_phase_heldout_notebook.py  build_magnitude_phase_tuning_notebook.py  fetch_slam.py  poc_image_space.py  recon_slice.py  smoke_phantom.py  sparse_supervision.py  stress_misreg.py  sweep_change.py  sweep_supervision.py
src/: README.md
src/presinr/: __init__.py  calibration.py  fft.py  forward.py  losses.py  metrics.py  recon.py  sampling.py  utils.py
src/presinr/baselines/: __init__.py  (+1 more)
tests/: test_calibration.py  test_forward.py  test_gate.py  test_inr.py  test_laps_experiment.py  test_losses.py  test_magnitude_phase.py  test_magnitude_phase_experiment.py  test_metrics.py  test_utils.py
(+49 files in other folders)
