[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "presinr"
version = "0.1.0"
description = "Patient-Specific Residual INR for accelerated follow-up brain MRI reconstruction"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "scikit-image",
    "sigpy",
    "matplotlib",
    "pandas",
    "requests",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
